# K-Algorithm

./: CMakeLists.txt  README.md  Readme.md
Climbing/: N-Queens-LS.md
Divide and Conquer/: readme.md
Divide and Conquer/Merge Sort/: readme.md
Divide and Conquer/Quick Sort/: main.cpp
Divide&Conquer/Merge Sort/: main.cpp  merge-sorted-array.md  merge_sort.md
Divide&Conquer/MergeSort/: main.cpp
Divide&Conquer/Quick Sort/: main.cpp  partition.md  readme.md
Divide/Selector/: merge-sorted-array.md
Dynamic/: readme.md
Dynamic/LCS/: main.cpp
Dynamic/MatrixChain/: main.cpp
LCS/: LCS.md
N-Queens/: N-Queens.md  main.cpp
N-Queens-SA/: main.cpp
Rapacity/: readme.md
Searching/BFS&DFS/: BFS&DFS.md  BFS&DFS.py  readme.md
Searching/Backtrack/: readme.md
Searching/Backtrack/N-Queens/: N-Queens.md  main.cpp  readme.md
Searching/Local Search/Climbing/: main.cpp
Searching/Local Search/LocalSearch/: main.cpp
Searching/Local Search/LocalSearch-Op/: main.cpp
Searching/Local Search/N-Queens-SA-Test/: main.cpp
Searching/Local Search/RouletteChoice/: RouletteChoice.md  main.cpp
Searching/Local Search/Searching/: main.cpp
Selector/: main.cpp  merge_sort.md  merge_sort1.md
Sorting/Heapsort/: main.cpp  readme.md
